adjust the spacing issue

--- a/OMS Front End/src/components/Grid/MolGrid.scss
+++ b/OMS Front End/src/components/Grid/MolGrid.scss
@@ -347,15 +347,29 @@ table {
 }
 
 // }
+.customer-list-all {
+  table {
+    tbody {
+      max-height: calc(100vh - 293px);
+    }
+  }
+}
+.inactive-list-sec{
+  table {
+    tbody {
+      max-height: calc(100vh - 343px);
+    }
+  }
+}
 
 @media only screen and (max-width: 1560px) {
   table {
     tbody {
       tr {
-        td{
+        td {
           &:last-child {
             a {
-              img{
+              img {
                 min-height: 16px;
                 min-width: 16px;
                 max-height: 16px;
