--- a/OMS Front End/src/pages/customerDetail/ViewCustomer.scss
+++ b/OMS Front End/src/pages/customerDetail/ViewCustomer.scss
@@ -177,7 +177,7 @@
 }
 .customer-detail-tab-sec{
   .card-body-sec{
-    
+
   }
 }
 
@@ -193,7 +193,7 @@
   .card-body-sec {
     display: flex;
     flex-direction: column;
-    max-height: calc(100vh - 270px);
+    max-height: calc(100vh - 248px);
     overflow: hidden;
     overflow-y: auto;
     width: 100%;
